--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-Django>=4.2,<6.0
+Django>=4.2
 djangorestframework
 Pillow
 gunicorn
-mysqlclient
 pymysql
+mysqlclient
+python-dotenv
+firebase-admin
+django-cors-headers
